# fiware-chronos

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt
.github/fiware/: config.json  image-clone.sh
.github/workflows/: ci.yml
CLA/: entity.md  individual.md
adapters/messaging/: rabbitmq_client.py  redis_client.py
adapters/mongo/: mongo_client.py
apps/api/: main.py
config/: logging.py  settings.py
core/dto/: health.py  info.py
deploy/docker/: Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  build.sh  docker-compose.dependencies.yml  docker-compose.yml  promtail-config.yaml  test.sh
docs/: architecture.md  clean_architecture_db.md  index.md  logging.md  requirements.txt
docs/admin-guide/: configuration.md  deployment.md  installation.md  operations.md
docs/architecture/: celery-queues.md  class-diagram.md  overview.md  sequence-diagrams.md
docs/css/: custom_palette.css  fiware_readthedocs_processing.css
docs/database/: modeling.md
docs/developer/: architecture.md  testing.md
docs/infrastructure/: configuration.md
docs/qa/: test-plan.md  test-report.md
docs/reference/: api.md  configuration.md
docs/specs/: requirements.md  use-cases.md
docs/user-guide/: api-walkthrough.md  fiware-interoperability.md  overview.md
pkg/utils/: versions.py
scripts/: dev_up.sh  format.sh  lint.sh  run_api.sh
scripts/docker/: docker_build.sh  docker_stop.sh  (+1 more)
src/: __init__.py
tests/: conftest.py
(+124 files in other folders)
